glpi/glpi-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: glpi-ingress
  namespace: glpi 
  annotations: 
    # cert-manager.io/issuer: "letsencrypt-staging"
    cert-manager.io/issuer: "letsencrypt-prod"

spec:
  ingressClassName: traefik
  tls: 
  - hosts: 
    - glpi-hml.jetsales.com.br
    secretName: glpi-tls
  rules:
  - host: "glpi-hml.jetsales.com.br" 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80
